<resources>
    <plurals name="reviews">
        <item quantity="one">%1$d Review</item>
        <item quantity="other">%1$d Reviews</item>
    </plurals>
    <string name="app_name">Movie Box</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_subtitle">moviebox@sarollahi.ir</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="upcoming">Upcoming</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="now_playing_movies">Now Playing Movies</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="top_rated_movies">Top Rated Movies</string>
    <string name="upcoming_tv">Upcoming TV Shows</string>
    <string name="now_playing_tv">Now Playing TV Shows</string>
    <string name="popular_tv">Popular TV Shows</string>
    <string name="top_rated_tv">Top Rated TV Shows</string>
    <string name="error_fetch_movies">Please check your internet connection</string>
    <!--tabs-->
    <string name="info">Info</string>
    <string name="review">Review</string>
    <string name="biography">Biography</string>
    <string name="images">Images</string>
    <string name="movies">Movies</string>
    <!--info-->
    <string name="overview">Story Line</string>
    <string name="cast">Cast List</string>
    <string name="director">Director</string>
    <string name="writer">Writer</string>
    <string name="seasons">Seasons</string>
    <string name="episodes">%1$s Episode(s)</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
    <string name="budget">Budget</string>
    <string name="boxOffice">BoxOffice</string>
    <string name="production_companies">Production Companies</string>
    <string name="related_movies">Related Movies</string>
    <string name="related_shows">Related TV Shows</string>
    <string name="recommended_movies">Recommended Movies</string>
    <string name="recommended_shows">Recommended TV Shows</string>
    <string name="imdb">IMDB</string>
    <string name="quality">%1$s %2$s</string>
    <string name="rating">%1$d%2$s</string>
    <string name="watchList">Watchlist</string>
    <string name="trailer">Trailer</string>
    <string name="share">Share</string>
    <string name="play">Play</string>

    <string name="movieQuality">Select Quality</string>
    <string name="streamProgress">%1$.2f %2$s</string>
    <string name="streamDownloadSpeed">Speed: %d KB</string>
    <string name="movieSubtitle">Select Subtitle</string>
    <string name="noSubtitle">No subtitles found to this movie..</string>
    <string name="subtitleError">Error with adding subtitle, Please try again..</string>
    <string name="view_all">View All</string>
    <!--facebook-->
    <string name="sponsored">Sponsored</string>
    <!--search-->
    <string name="search_movie_tv">SEARCH MOVIE/TV SHOW</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="search_by_person">SEARCH BY PERSON</string>
    <string name="name">Name</string>
    <string name="search_by_genre">SEARCH BY GENRE</string>
    <string name="movies_search_title">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="music_videos">Music Videos</string>
    <string name="search">Search</string>
    <string name="search_drawer">Search Drawer</string>
    <!--menu-->
    <string name="my_watch_list">My Watchlist</string>
    <string name="downloads">My Downloads</string>
    <string name="updates">Updates</string>
    <string name="backup_restore"><![CDATA[Backup & restore]]></string>
    <string name="contact_developer_title">Contact developer</string>
    <string name="about">About</string>
    <string name="utilities">UTILITIES</string>
    <string name="my_collection">MY COLLECTION</string>
    <string name="auth">Sign in</string>


    <string name="streamSeeds">Seeds: %d</string>
    <!--person-->
    <string name="search_movies_tv_shows"> movies/TV shows </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- About -->
    <string name="hint_tmdb_sentence" translatable="false">This product uses the TMDb API but is not endorsed or certified by TMDb</string>
    <string name="rate" translatable="false">"Rate positive"</string>
    <string name="dialog_app_version_prefix" translatable="false">Version: %1$s</string>
    <string name="dialog_developer_information" translatable="false"><span>\nDeveloped and designed by</span>\n\n<span><small>Seyed Ahmad Sarollahi\nmoviebox@sarollahi.ir</small></span></string>

    <!-- Contact -->
    <string name="contact_title">Drop us a line</string>
    <string name="contact_name_title">Full Name</string>
    <string name="contact_required">(Required)</string>
    <string name="contact_name_hint">What\'s your full name?</string>
    <string name="contact_email_title">Email address</string>
    <string name="contact_email_hint">you@example.com</string>
    <string name="contact_message_title">Message</string>
    <string name="contact_message_hint">Write your message for the team here</string>
    <string name="submit">Submit</string>

    <!-- Alert -->
    <string name="contact_alert_title">Message Received Successfully!</string>
    <string name="contact_alert_message">Do you want to back to the start page?</string>
    <string name="contact_alert_yes">Yes</string>
    <string name="contact_alert_no">No</string>

    <string name="play_url">http://play.google.com/store/apps/details?id=%1$s</string>
    <string name="market_url">market://details?id=%1$s</string>


    <!-- Details -->
    <string name="tv_release_date">%1$s - %2$s</string>
    <string name="movie_release_date">%1$s</string>
    <string name="runtime_hour_min">%d H %02d Min |\u0020</string>
    <string name="runtime_min">%d Min |\u0020</string>
    <string name="imdb_url">https://www.imdb.com/title/%1$s/</string>
    <string name="facebook_url">https://www.facebook.com/%1$s/</string>
    <string name="instagram_url">https://www.instagram.com/%1$s/</string>
    <string name="twitter_url">https://twitter.com/%1$s/</string>
    <string name="person_death_date">\u0020- %1$s</string>

</resources>