<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/nav_upcoming"
        android:icon="@drawable/ic_upcomming"
        android:title="@string/upcoming" />

    <item
        android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_now_playing"
        android:title="@string/now_playing" />

    <item
        android:id="@+id/placeholder"
        android:title="" />

    <item
        android:id="@+id/nav_popular"
        android:icon="@drawable/ic_popular"
        android:title="@string/popular" />

    <item
        android:id="@+id/nav_toprated"
        android:icon="@drawable/ic_top_rating"
        android:title="@string/top_rated" />
    </group>

</menu>